# spool

./: LICENSE  Makefile  README.md  TODO.md  main.py  pyproject.toml
.github/workflows/: main.yml
euler/: p1.spl  p2.spl  p3.spl  p4.spl  p5.spl  p6.spl
examples/: collatz.spl  fibonacci.spl  fizzbuzz.spl  neg.spl  prime.spl  recursion.spl  sin_approx.spl  tokenize_test.spl
scripts/: dev.sh
spool/: collatz.spl  fizzbuzz.spl  sin_approx.spl
src/: spool.py  test_euler.py  test_spool.py
