[project]
name = "spool"
version = "0.1.0"
description = "Simple stack-based PL."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.scripts]
spool = "spool:main"

[tool.uv]
package = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade (modern syntax)
    # "TRY",  # tryceratops (exception handling)
    "PERF", # performance rules
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
]

[tool.isort]
profile = "black"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
strict_equality = true
follow_imports = "silent"
show_error_codes = true
